force-app/main/default/objects/ALM_Code_Engine_Settings__mdt/ALM_Code_Engine_Settings__mdt.object-meta.xml
<CustomObject>
    <description>REV-60 engine configuration (single Control record): master + per-layer kill switches, the ALM product-scope set, year-suffix and +Z composition toggles, and documentation of the pending base-promo determinant (§7.1) and contract-year source (§7.3) fields.</description>
    <label>ALM Code Engine Setting</label>
    <pluralLabel>ALM Code Engine Settings</pluralLabel>
</CustomObject>