force-app/main/default/objects/ALM_Code_Engine_Settings__mdt/fields/ALM_Product_Codes__c.field-meta.xml
<CustomField>
    <fullName>ALM_Product_Codes__c</fullName>
    <description>REV-60 ALM-scoping gate: semicolon-separated ProductCodes the engine may act on. Reuses the REV-71 anchor set plus NYLJ (pending Cayla/Team Brady confirmation). Lines whose ProductCode is not in this set are never touched.</description>
    <label>ALM Product Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>