force-app/main/default/objects/ALM_Code_Engine_Settings__mdt/fields/Contract_Year_Field_API__c.field-meta.xml
<CustomField>
    <fullName>Contract_Year_Field_API__c</fullName>
    <description>REV-60 spec §7.3 documentation: the source of the contract-year index used for the year suffix. Wired directly in-flow once confirmed; this field records the decision.</description>
    <label>Contract Year Field API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>