force-app/main/default/objects/ALM_Code_Engine_Settings__mdt/fields/Default_Base_Promo__c.field-meta.xml
<CustomField>
    <fullName>Default_Base_Promo__c</fullName>
    <description>REV-60: the "else Non-AmLaw" fallback base promo (e.g. !SJSI) used when the firm is not AmLaw/NLJ/Global ranked and no team/campaign override applies.</description>
    <label>Default Base Promo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>