force-app/main/default/objects/ALM_Code_Engine_Settings__mdt/fields/Determinant_Field_API__c.field-meta.xml
<CustomField>
    <fullName>Determinant_Field_API__c</fullName>
    <description>REV-60 spec §7.1 documentation: the API name of the quote-line field carrying the base-promo determinant. Wired directly in-flow once confirmed (Flow cannot reference a field by dynamic name); this field records the decision.</description>
    <label>Determinant Field API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>