force-app/main/default/objects/ALM_Code_Engine_Settings__mdt/fields/Dispatch_Backstop_Hint__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Backstop_Hint__c</fullName>
    <description>REV-60 backstop UX: appended to the save-time Custom Error when a required Dispatch code is missing, so the rep knows what the valid values are (UAT round 1: a tester typed the product code into Dispatch to clear the block). Plain text, shown verbatim after the gap list.</description>
    <label>Dispatch Backstop Hint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>