force-app/main/default/objects/ALM_Code_Engine_Settings__mdt/fields/Dispatch_Required_Product_Codes__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Required_Product_Codes__c</fullName>
    <description>REV-60 backstop: semicolon-separated ProductCodes that MUST carry a non-blank Dispatch_Method_Code__c. After the engine has filled what it can, the save-time backstop raises a Custom Error if any in-scope line of one of these products is still blank. Excludes bundle parents. Seed: LAWM;LWKM;GLBM;NYLM;NYOM.</description>
    <label>Dispatch Required Product Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>