force-app/main/default/objects/ALM_Code_Engine_Settings__mdt/fields/Enforce_Dispatch_After__c.field-meta.xml
<CustomField>
    <fullName>Enforce_Dispatch_After__c</fullName>
    <description>REV-60 dispatch-backstop grandfathering cutoff. The save-time backstop only raises a Custom Error for a required-but-blank Dispatch_Method_Code__c on lines whose CreatedDate is ON or AFTER this instant. Lines created before it are grandfathered and never hard-block, which is what lets LAWM/LWKM/NYOM be re-armed in Dispatch_Required_Product_Codes__c without retroactively blocking the ~914 legacy open quotes. BLANK = enforce on every line regardless of age (original pre-grandfathering behaviour). Set 2026-07-17 at the post-go-live hardening window.</description>
    <label>Enforce Dispatch After</label>
    <type>DateTime</type>
</CustomField>