force-app/main/default/objects/ALM_Code_Engine_Settings__mdt/fields/Frequency_Field_API__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Field_API__c</fullName>
    <description>REV-60: API name of the quote-line billing-frequency field the engine reads to compose the frequency code (Annual→"", Monthly→M, Quarterly→Q, Semi-Annual→H). Confirmed: SBQQ__BillingFrequency__c.</description>
    <label>Frequency Field API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>