force-app/main/default/objects/ALM_Code_Engine_Settings__mdt/fields/Layer_1_Active__c.field-meta.xml
<CustomField>
    <fullName>Layer_1_Active__c</fullName>
    <description>REV-60 Layer 1 kill switch (Quote Line stamp, invoked via Quote_AfterSave_MasterFlow). Ships false (Phase A scaffold).</description>
    <defaultValue>false</defaultValue>
    <label>Layer 1 Active</label>
    <type>Checkbox</type>
</CustomField>