force-app/main/default/objects/ALM_Code_Engine_Settings__mdt/fields/Layer_2_Active__c.field-meta.xml
<CustomField>
    <fullName>Layer_2_Active__c</fullName>
    <description>REV-60 Layer 2 kill switch (Opportunity safety-net flow). Ships false (Phase A scaffold).</description>
    <defaultValue>false</defaultValue>
    <label>Layer 2 Active</label>
    <type>Checkbox</type>
</CustomField>