force-app/main/default/objects/ALM_Code_Engine_Settings__mdt/fields/Master_Active__c.field-meta.xml
<CustomField>
    <fullName>Master_Active__c</fullName>
    <description>REV-60 master kill switch. When false the entire engine is inert regardless of the per-layer switches. Ships false (Phase A scaffold).</description>
    <defaultValue>false</defaultValue>
    <label>Master Active</label>
    <type>Checkbox</type>
</CustomField>