force-app/main/default/objects/ALM_Code_Engine_Settings__mdt/fields/Mid_Market_Pro_Product_Codes__c.field-meta.xml
<CustomField>
    <fullName>Mid_Market_Pro_Product_Codes__c</fullName>
    <description>REV-60: semicolon-separated ProductCodes that mark a deal as Mid Market Pro. The +Z modifier is applied to a quote's ALM lines when any line on the quote has one of these product codes (deal-level signal — the Law.com line itself carries no package code). Confirmed seed: "Mid Market Pro Bundle".</description>
    <label>Mid Market Pro Product Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>