force-app/main/default/objects/ALM_Code_Engine_Settings__mdt/fields/Segment_Promo_Product_Codes__c.field-meta.xml
<CustomField>
    <fullName>Segment_Promo_Product_Codes__c</fullName>
    <description>REV-60: semicolon-separated ProductCodes whose promo BASE is derived from the firm segment cascade (the Law.com umbrella — LAWM, LWKM). A product NOT listed here and NOT carrying a Product Base row gets no promo (dispatch-only) — e.g. print/online NYLM/NYOM. Added 30 Jun 2026 after PROD data showed base derivation is segment-driven only for Law.com.</description>
    <label>Segment Promo Product Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>