force-app/main/default/objects/ALM_Code_Engine_Settings__mdt/fields/Small_Firm_Attorney_Max__c.field-meta.xml
<CustomField>
    <fullName>Small_Firm_Attorney_Max__c</fullName>
    <description>REV-60 small-firm promo rule. Maximum attorney count for a deal to be treated as solo / single-user / small firm and receive Small_Firm_Base_Promo__c. Business rule (22 Jul 2026): solo firms, single-user institutions and small law firms of 4 or fewer attorneys use !SREN; do NOT apply where the Opportunity carries a Group ID. Attorney count is read from the firm (Account.Ultimate_Account__r.Number_of_Attorneys__c) falling back to the buying account, mirroring how firm segment is resolved. BLANK disables the rule entirely.</description>
    <label>Small Firm Attorney Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>