force-app/main/default/objects/ALM_Code_Engine_Settings__mdt/fields/Year_Suffix_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Year_Suffix_Enabled__c</fullName>
    <description>REV-60 global toggle for year-suffix composition (Y2/Y3/Y4; year 1 unsuffixed). Ships true.</description>
    <defaultValue>true</defaultValue>
    <label>Year Suffix Enabled</label>
    <type>Checkbox</type>
</CustomField>