force-app/main/default/objects/ALM_Code_Engine_Settings__mdt/fields/Z_Trigger_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Z_Trigger_Enabled__c</fullName>
    <description>REV-60 global toggle for the +Z modifier. Ships false until spec §7.4 (the exact +Z trigger) is confirmed.</description>
    <defaultValue>false</defaultValue>
    <label>Z Trigger Enabled</label>
    <type>Checkbox</type>
</CustomField>