force-app/main/default/objects/ALM_Code_Engine_Settings__mdt/fields/Z_Trigger_Product_Codes__c.field-meta.xml
<CustomField>
    <fullName>Z_Trigger_Product_Codes__c</fullName>
    <description>REV-60 spec §7.4: semicolon-separated ProductCodes that trigger the +Z modifier (e.g. Mid Market Pro). AND-ed with row Z_Eligible. Empty in the Phase A scaffold.</description>
    <label>Z Trigger Product Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>